--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React</title>
+    <title>My Tasks</title>
   </head>
   <body>
     <noscript>Ativar js.</noscript>
